--- a/mod3_solution/foundItems.html
+++ b/mod3_solution/foundItems.html
@@ -1,4 +1,4 @@
-<div>
+<div class="clearFloat">
   <ol>
     <li ng-repeat="item in list.items">
       {{ item.name }}, {{ item.short_name }}, {{ item.description }}
@@ -6,6 +6,6 @@
     </li>
   </ol>
 </div>
-<div class="error" ng-if="list.checkList()">
+<!-- <div class="error" ng-if="list.checkList()">
   Nothing found
-</div>
+</div> -->
