--- a/AngularJS/mod4_solution/index.html
+++ b/AngularJS/mod4_solution/index.html
@@ -1,36 +1,34 @@
 <!doctype html>
-<html lang="en" ng-app='NarrowItDownApp'>
+<html lang="en" ng-app='MenuApp'>
   <head>
-    <title>Narrow Down Your Menu Choice</title>
+    <title>MenuApp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="angular.min.js"></script>
-    <script src="app.js"></script>
+
+    <!-- Libraries -->
+    <script src="lib/angular.min.js"></script>
+    <script src="lib/angular-ui-router.min.js"></script>
+
+    <!-- Modules -->
+    <script src="src/menuapp/menuapp.module.js"></script>
+    <script src="src/menuapp/data.module.js"></script>
+
+    <!-- Routes -->
+    <script src="src/routes.js"></script>
+
+    <!-- 'MenuApp' module artifacts -->
+    <script src="src/menuapp/categories.component.js"></script>
+    <script src="src/menuapp/categorylist.controller.js"></script>
+    <script src="src/menuapp/itemlist.controller.js"></script>
+    <script src="src/menuapp/items.component.js"></script>
+    <script src="src/menuapp/menudata.service.js"></script>
+
+
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 <body>
-   <div class="container" ng-controller='NarrowItDownController as list'>
-    <h1>Narrow Down Your Chinese Menu Choice</h1>
-
-    <div class="form-group">
-      <input type="text" ng-model="list.searchTerm" placeholder="search term" class="form-control">
-    </div>
-    <div class="form-group narrow-button">
-      <button class="btn btn-primary" ng-click="list.getMatchedMenuItems(list.searchTerm);">Narrow It Down For Me!</button>
-    </div>
-
-    <!-- Bonus loader (see Bonus section of the assignment) -->
-    <items-loader-indicator></items-loader-indicator>
-
-    <!-- found-items should be implemented as a component -->
-    <found-items
-      items="list.found"
-      on-remove="list.removeItem(index)">
-    </found-items>
-    <div class="error" ng-if="list.checkList()">
-      Nothing found
-    </div>
-  </div>
+  <h3>Welcome to our Restaurant!</h3>
+  <ui-view></ui-view>
 
 </body>
 </html>
